# woinc

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile.in  README.md
cmake/: woincSetupCompilerOptions.cmake
lib/: CMakeLists.txt
lib/include/woinc/: defs.h  rpc_command.h  rpc_connection.h  types.h.in  version.h
lib/src/: md5.cc  md5.h  rpc_command.cc  rpc_connection.cc  rpc_parsing.cc  rpc_parsing.h  socket.h  socket_posix.cc  types.cc  version.cc.in  visibility.h  xml.cc  xml.h
lib/tests/: CMakeLists.txt  md5_tests.cc  test.cc  test.h  woinc_assert.h  xml_tests.cc
lib/tests/commands/: authorize_cmd_test.cc  exchange_versions_cmd_test.cc  generic_command_tests.h  get_cc_status_cmd_test.cc  get_results_cmd_test.cc  rpc_connection_mock.h  xml_helpers.h
lib/tests/manual/: posix_socket_tests.cc
libui/: CMakeLists.txt
libui/include/woinc/ui/: controller.h  defs.h  error.h  handler.h
libui/profiling/: CMakeLists.txt  README  run_periodic_tasks.cc
libui/src/: client.cc  client.h  configuration.cc  configuration.h  controller.cc  handler_registry.cc  handler_registry.h  host_controller.cc  host_controller.h  job_queue.cc  job_queue.h  jobs.cc  jobs.h  periodic_tasks_scheduler.cc  periodic_tasks_scheduler.h  visibility.h
scripts/: add_copyright.sh  generate_single_test_coverage.sh  generate_test_coverage.sh
ui/: CMakeLists.txt
ui/cli/: CMakeLists.txt  main.cc
ui/common/: CMakeLists.txt  types_to_string.cc  types_to_string.h
ui/qt/: CMakeLists.txt  adapter.cc  adapter.h  controller.cc  controller.h  defs.h  gui.cc  gui.h  main.cc  menu.cc  menu.h  model.cc  model.h  model_handler.cc  model_handler.h  tabs_widget.cc  tabs_widget.h  types.cc  types.h  utils.cc  utils.h
ui/qt/dialogs/: about_dialog.cc  about_dialog.h  add_project_wizard.cc  add_project_wizard.h  event_log_options_dialog.cc  event_log_options_dialog.h  preferences_dialog.cc  preferences_dialog.h  project_properties_dialog.cc  project_properties_dialog.h  select_computer_dialog.cc  select_computer_dialog.h  simple_progress_animation.cc  simple_progress_animation.h  task_properties_dialog.cc  task_properties_dialog.h  utils.h
ui/qt/docs/: arch.dot
ui/qt/tabs/: delegates.cc  delegates.h  disk_tab.cc  disk_tab.h  events_tab.cc  events_tab.h  notices_tab.cc  notices_tab.h  projects_tab.cc  projects_tab.h  proxy_models.cc  proxy_models.h  statistics_tab.cc  statistics_tab.h  tab_model_updater.h  tasks_tab.cc  tasks_tab.h  transfers_tab.cc  transfers_tab.h
ui/qt/tests/: CMakeLists.txt  tab_model_updater_test.cc
